--- a/FlitBit.Dto.WebApi/FlitBit.Dto.WebApi/FlitBit.Dto.WebApi.csproj
+++ b/FlitBit.Dto.WebApi/FlitBit.Dto.WebApi/FlitBit.Dto.WebApi.csproj
@@ -109,7 +109,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="App_Start\FlitBitDtoConfig.cs" />
+    <None Include="Content\App_Start\FlitBitDtoConfig.cs.pp" />
     <Compile Include="HttpBodyAttribute.cs" />
     <Compile Include="MediaFormatters\DtoMediaTypeFormatter.cs" />
     <Compile Include="ModelBinding\DtoModelBinder.cs" />
