--- a/FlitBit.Dto.WebApi/FlitBit.Dto.WebApi/FlitBit.Dto.WebApi.nuspec
+++ b/FlitBit.Dto.WebApi/FlitBit.Dto.WebApi/FlitBit.Dto.WebApi.nuspec
@@ -18,7 +18,7 @@ using this tokenized nuspec file.
     <authors>Tyler Garlick</authors>
     <owners>Tyler Garlick</owners>
     <id>FlitBit.Dto.WebApi</id>
-    <title>FlitBit.Dto.WebApi</title>
+    <title>RedRocket | FlitBit.Dto.WebApi</title>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Everything you need to get started with WebApi and FlitBit.Dto</description>
     <projectUrl>https://github.com/TylerGarlick/FlitBit.Dto.WebApi</projectUrl>
@@ -26,7 +26,7 @@ using this tokenized nuspec file.
     <dependencies>
       <dependency id="RedRocket.Utilities.Core" />
       <dependency id="FlitBit.IoC.WebApi" />
-      <dependency id="FlitBit.Represent" />
+      <dependency id="RedRocket.FlitBit.Represent" />
     </dependencies>
   </metadata>
   <files>
