--- a/FlitBit.Dto.WebApi/FlitBit.Dto.WebApi/packages.config
+++ b/FlitBit.Dto.WebApi/FlitBit.Dto.WebApi/packages.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FlitBit.Copy" version="2.8.1" targetFramework="net45" />
-  <package id="FlitBit.Core" version="2.11.3" targetFramework="net45" />
-  <package id="FlitBit.Emit" version="2.8.5" targetFramework="net45" />
-  <package id="FlitBit.IoC" version="2.11.2" targetFramework="net45" />
+  <package id="FlitBit.Copy" version="2.8.2" targetFramework="net45" />
+  <package id="FlitBit.Core" version="2.11.4" targetFramework="net45" />
+  <package id="FlitBit.Emit" version="2.8.6" targetFramework="net45" />
+  <package id="FlitBit.IoC" version="2.12.1" targetFramework="net45" />
   <package id="FlitBit.IoC.WebApi" version="1.0.6" targetFramework="net45" />
-  <package id="FlitBit.Represent" version="1.1.0" targetFramework="net45" />
+  <package id="FlitBit.Represent" version="1.2.2" targetFramework="net45" />
   <package id="FlitBit.Wireup" version="3.0.3" targetFramework="net45" />
   <package id="JetBrains.Annotations" version="7.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net45" />
@@ -14,9 +14,11 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net45" />
-  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.Bcl" version="1.1.3" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Build" version="1.0.10" targetFramework="net45" />
+  <package id="Microsoft.Net.Http" version="2.2.13" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
-  <package id="RedRocket.Utilities.Core" version="1.0.5" targetFramework="net45" />
-  <package id="WebActivatorEx" version="2.0.2" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
+  <package id="RedRocket.Utilities.Core" version="1.0.7" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.0.3" targetFramework="net45" />
 </packages>
