--- a/FlitBit.Dto.WebApi/FlitBit.Dto.WebApi/FlitBit.Dto.WebApi.nuspec
+++ b/FlitBit.Dto.WebApi/FlitBit.Dto.WebApi/FlitBit.Dto.WebApi.nuspec
@@ -25,8 +25,7 @@ using this tokenized nuspec file.
     <tags>FlitBit, FlitBit.IoC, FlitBit.Dto, Web Api, WebApi</tags>
     <dependencies>
       <dependency id="RedRocket.Utilities.Core" />
-      <dependency id="FlitBit.Emit" version="[2.8.5]" />
-      <dependency id="FlitBit.IoC.WebApi" version="1.0.8" />
+      <dependency id="FlitBit.IoC.WebApi" />
       <dependency id="FlitBit.Represent" />
     </dependencies>
   </metadata>
