--- a/FlitBit.Dto.WebApi/FlitBit.Dto.WebApi/FlitBit.Dto.WebApi.csproj
+++ b/FlitBit.Dto.WebApi/FlitBit.Dto.WebApi/FlitBit.Dto.WebApi.csproj
@@ -46,13 +46,13 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\FlitBit.Emit.2.8.6\lib\net40\FlitBit.Emit.dll</HintPath>
     </Reference>
-    <Reference Include="FlitBit.IoC, Version=2.12.1.0, Culture=neutral, PublicKeyToken=38f03d0878531ff3, processorArchitecture=MSIL">
+    <Reference Include="FlitBit.IoC, Version=2.12.2.0, Culture=neutral, PublicKeyToken=38f03d0878531ff3, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\FlitBit.IoC.2.12.1\lib\net40\FlitBit.IoC.dll</HintPath>
+      <HintPath>..\packages\FlitBit.IoC.2.12.2\lib\net40\FlitBit.IoC.dll</HintPath>
     </Reference>
-    <Reference Include="FlitBit.IoC.WebApi, Version=1.0.5010.22221, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="FlitBit.IoC.WebApi, Version=1.0.5023.38115, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\FlitBit.IoC.WebApi.1.0.14\lib\net45\FlitBit.IoC.WebApi.dll</HintPath>
+      <HintPath>..\packages\FlitBit.IoC.WebApi.1.1.3\lib\net45\FlitBit.IoC.WebApi.dll</HintPath>
     </Reference>
     <Reference Include="FlitBit.Wireup, Version=3.0.3.0, Culture=neutral, PublicKeyToken=38f03d0878531ff3, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -76,14 +76,16 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Net.Http.Extensions">
-      <HintPath>..\packages\Microsoft.Net.Http.2.2.13\lib\net45\System.Net.Http.Extensions.dll</HintPath>
+    <Reference Include="System.Net.Http.Extensions, Version=2.2.15.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Microsoft.Net.Http.2.2.15\lib\net45\System.Net.Http.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http.Formatting, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.4.0.30506.0\lib\net40\System.Net.Http.Formatting.dll</HintPath>
     </Reference>
-    <Reference Include="System.Net.Http.Primitives">
-      <HintPath>..\packages\Microsoft.Net.Http.2.2.13\lib\net45\System.Net.Http.Primitives.dll</HintPath>
+    <Reference Include="System.Net.Http.Primitives, Version=4.2.15.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Microsoft.Net.Http.2.2.15\lib\net45\System.Net.Http.Primitives.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Web.Helpers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -128,13 +130,14 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Content\App_Start\FlitBitDtoConfig.cs.pp" />
-    <Compile Include="App_Start\FlitBitConfig.cs" />
     <Compile Include="AssemblyWireup.cs" />
     <Compile Include="HttpBodyAttribute.cs" />
-    <Compile Include="MediaFormatters\DtoMediaTypeFormatter.cs" />
-    <Compile Include="ModelBinding\DtoJsonConverter.cs" />
-    <Compile Include="ModelBinding\DtoModelBinder.cs" />
-    <Compile Include="ModelBinding\DtoModelBinderProvider.cs" />
+    <Compile Include="DefaultCamelCasePropertyNamesContractResolver.cs" />
+    <Compile Include="DefaultDtoModelBinder.cs" />
+    <Compile Include="DefaultDtoModelBinderProvider.cs" />
+    <Compile Include="DefaultJsonConverter.cs" />
+    <Compile Include="DefaultJsonSerializerSettings.cs" />
+    <Compile Include="DefaultDtoMediaTypeFormatter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
