--- a/FlitBit.Dto.WebApi/FlitBit.Dto.WebApi/packages.config
+++ b/FlitBit.Dto.WebApi/FlitBit.Dto.WebApi/packages.config
@@ -1,20 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FlitBit.Copy" version="2.8.3" targetFramework="net45" />
-  <package id="FlitBit.Core" version="2.11.4" targetFramework="net45" />
-  <package id="FlitBit.Emit" version="2.8.6" targetFramework="net45" />
-  <package id="FlitBit.IoC" version="2.12.2" targetFramework="net45" />
-  <package id="FlitBit.IoC.WebApi" version="1.1.6" targetFramework="net45" />
-  <package id="FlitBit.Wireup" version="3.0.3" targetFramework="net45" />
+  <package id="FlitBit.Copy" version="2.8.4" targetFramework="net45" />
+  <package id="FlitBit.Core" version="2.11.6" targetFramework="net45" />
+  <package id="FlitBit.Emit" version="2.8.7" targetFramework="net45" />
+  <package id="FlitBit.IoC" version="2.13.1" targetFramework="net45" />
+  <package id="FlitBit.IoC.Web.Common" version="1.2.4" targetFramework="net45" />
+  <package id="FlitBit.IoC.WebApi" version="1.2.4" targetFramework="net45" />
+  <package id="FlitBit.Wireup" version="3.1.0" targetFramework="net45" />
   <package id="JetBrains.Annotations" version="7.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi" version="5.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.1.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
   <package id="RedRocket.Utilities.Core" version="1.0.7" targetFramework="net45" />
-  <package id="WebActivatorEx" version="2.0.3" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.0.4" targetFramework="net45" />
 </packages>
